# ofd2pdf

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
scripts/: build_windows_exe.ps1  ofd2pdf_gui.py
src/ofd2pdf/: __init__.py  cli.py  converter.py  exceptions.py  gui.py  ofd.py  renderer.py
tests/: test_conversion.py
