[project]
name = "ofd2pdf"
version = "0.1.0"
description = "Convert OFD fixed-layout documents to PDF."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "defusedxml>=0.7.1",
  "lxml>=6.0",
  "pillow>=12.0",
  "pypdf>=6.0",
  "reportlab>=4.4",
  "tkinterdnd2>=0.4.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]
exe = [
  "pyinstaller>=6.0",
]

[project.scripts]
ofd2pdf = "ofd2pdf.cli:main"
ofd2pdf-gui = "ofd2pdf.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
